--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+  <script defer src="https://use.fontawesome.com/releases/v5.0.6/js/all.js"></script>
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Jar Jar Binks</title>
 <style>
@@ -14,12 +16,25 @@ body {
 </style>
 
 </head>
-<body>
+<body class="container">
 
+<div class="jumbotron">
   <h1>Jar Jar Binks</h1>
-  <h3>The greatest character of Star Wars</h3>
 
-  <img src="jar-jar-binks.jpg" alt="Jar Jar Binks" style="width: 600px; height: 400px;">
+</div>
+
+<div class="row">
+  <div class="col-xs 12 col-md-6">
+      <img src="jar-jar-binks.jpg" alt="Jar Jar Binks" style="width:100%;">
+  </div>
+  <div class="col-xs-12 col-md-6">
+    <h1>Jar Jar Binks</h1>
+    <h3>The greatest character of Star Wars</h3>
+  </div>
+
+
+
+</div>
 
 <p>Jar Jar binks is a character from the best trilogy of Star Wars: the prequels. Not only is he the comedic relief this series needed but he also is a powerful sith lord! Nobody can hate this lovable star wars character as he stumbles around yelling "Meesa!" and dooming the universe to the rule of Palpatine!</p>
 
@@ -40,13 +55,41 @@ body {
 </ul>
 
 <h3>Links to broaden your knowledge on this amazing character</h3>
-<ul>
-  <li> <a href="https://www.reddit.com/r/StarWars/comments/3qvj6w/theory_jar_jar_binks_was_a_trained_force_user/">Jar Jar is actually a sith lord</a> </li>
-  <li> <a href="http://starwars.wikia.com/wiki/Jar_Jar_Binks">Jar Jar's Wiki</a></li>
-  <li> <a href="https://www.theodysseyonline.com/10-reasons-jar-jar-binks-best-star-wars-character">Reasons why Jar Jar is best</a></li>
-  <li><a href="video.html">See Video</a></li>
-</ul>
+
+   <a class="btn btn-primary" role="button" target="_blank" href="https://www.reddit.com/r/StarWars/comments/3qvj6w/theory_jar_jar_binks_was_a_trained_force_user/">Jar Jar is actually a sith lord <i class="fab fa-empire"></i></a>
+   <a class="btn btn-primary" role="button" target="_blank " href="http://starwars.wikia.com/wiki/Jar_Jar_Binks">Jar Jar's Wiki</a>
+   <a class="btn btn-primary" role="button" target="_blank" href="https://www.theodysseyonline.com/10-reasons-jar-jar-binks-best-star-wars-character">Reasons why Jar Jar is best</a>
+  <a class="btn btn-primary" role="button" href="video.html" target="_blank">See Video</a>
 
 
+
+  <!-- Trigger the modal with a button -->
+  <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#myModal">Super Secret Dialogue box</button>
+
+  <!-- Modal -->
+  <div id="myModal" class="modal fade" role="dialog">
+  <div class="modal-dialog">
+
+  <!-- Modal content-->
+  <div class="modal-content">
+  <div class="modal-header">
+  <h4 class="modal-title">Jar Jar is great</h4>
+  <button type="button" class="close" data-dismiss="modal">&times;</button>
+
+  </div>
+  <div class="modal-body">
+  <p>it sucks if you think differently</p>
+  </div>
+  <div class="modal-footer">
+  <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+  </div>
+  </div>
+
+  </div>
+  </div>
+
+  <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
 </body>
 </html>
